# binance-api-client

./: Cargo.toml  README.md
examples/: account_trading.rs  advanced_orders.rs  depth_cache.rs  margin_trading.rs  market_data.rs  reconnecting_websocket.rs  user_data_stream.rs  wallet_api.rs  websocket_streams.rs
src/: client.rs  config.rs  credentials.rs  error.rs  lib.rs  types.rs  websocket.rs
src/api/: account.rs  margin.rs  market.rs  mod.rs  userstream.rs  wallet.rs
src/models/: account.rs  margin.rs  market.rs  mod.rs  wallet.rs  websocket.rs
src/rest/: account.rs
src/ws/: mod.rs
tests/: market_tests.rs  websocket_tests.rs
tests/mocks/market/: agg_trades.json  avg_price.json  book_ticker.json  depth.json  exchange_info.json  klines.json  server_time.json  ticker_24h.json  ticker_price.json  ticker_prices.json  trades.json
