[package]
name = "binance-api-client"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for Binance Spot REST and WebSocket APIs."
license = "MIT"
readme = "README.md"
rust-version = "1.85"
repository = "https://github.com/dcompoze/binance-api-client"
homepage = "https://github.com/dcompoze/binance-api-client"
documentation = "https://docs.rs/binance-api-client"
keywords = ["binance", "crypto", "trading", "websocket", "api-client"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[lib]
name = "binance_api_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.13.1", features = ["json"] }
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
reqwest-tracing = "0.6.0"
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.49", features = ["full"] }
tokio-test = "0.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
